k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  namespace: wisecow
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ab74521adc4ab40fda878fb200737339-1061071b66364837.elb.us-west-2.amazonaws.com
    secretName: wisecow-tls
  rules:
  - host: ab74521adc4ab40fda878fb200737339-1061071b66364837.elb.us-west-2.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 80
